--- a/hong-web/index.html
+++ b/hong-web/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>hong-web</title>
 	<link rel="stylesheet" href="/css/default.css">
-	<link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Cinzel+Decorative|Megrim|Peddana|Poiret+One|Signika" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Cinzel+Decorative|Megrim|Peddana|Poiret+One|Signika|Josefin+Sans" rel="stylesheet">
+	<script src="https://use.fontawesome.com/d7cce94424.js"></script>
   </head>
   <body>
 	<div id="app"></div>
