--- a/hong-web/index.html
+++ b/hong-web/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8">
-	<meta name="theme-color" content="#222222">
+	<meta name="theme-color" content="#2f2f2f">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="title" content="HONG-WEB">
 	<meta name="description" content="Web Front-end Developer Hong-web">
@@ -32,7 +32,6 @@
 	<link rel="icon" type="image/png" sizes="192x192" href="/img/com/logo_black_192.png">
 	<link rel="stylesheet" href="/css/default.css">
 	<link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Cinzel+Decorative|Megrim|Peddana|Poiret+One|Signika|Josefin+Sans" rel="stylesheet">
-	<script src="https://use.fontawesome.com/d7cce94424.js"></script>
   </head>
   <body>
 	<div id="app"></div>
