--- a/hong-web/index.html
+++ b/hong-web/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Web Front-end Developer Hong-web">
 	<meta name="keyword" content="vue.js, hong-web, hongweb">
 	<meta property="og:url" content="http://hong-web.com/">
-	<meta property="og:image" content="/img/com/logo_black.png">
+	<meta property="og:image" content="/img/com/logo_og.jpg">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="HONG-WEB">
 	<meta property="og:description" content="Web Front-end Developer Hong-web">
@@ -20,16 +20,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="format-detection" content="telephone=no">
 
-	<link rel="apple-touch-icon" sizes="16x16" href="/img/com/logo_black_16.png">
-	<link rel="apple-touch-icon" sizes="40x40" href="/img/com/logo_black_40.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/img/com/logo_black_76.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/img/com/logo_black_120.png">
-	<link rel="apple-touch-icon" sizes="192x192" href="/img/com/logo_black_192.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/com/logo_black_16.png">
-	<link rel="icon" type="image/png" sizes="40x40" href="/img/com/logo_black_40.png">
-	<link rel="icon" type="image/png" sizes="76x76" href="/img/com/logo_black_76.png">
-	<link rel="icon" type="image/png" sizes="120x120" href="/img/com/logo_black_120.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="/img/com/logo_black_192.png">
+	<link rel="apple-touch-icon" sizes="16x16" href="/img/com/logo_small.png">
+	<link rel="apple-touch-icon" sizes="40x40" href="/img/com/logo_small.png">
+	<link rel="apple-touch-icon" sizes="69x69" href="/img/com/logo_small.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/img/com/logo_small.png">
+	<link rel="icon" type="image/png" sizes="40x40" href="/img/com/logo_small.png">
+	<link rel="icon" type="image/png" sizes="69x69" href="/img/com/logo_small.png">
 	<link rel="stylesheet" href="/css/default.css">
 	<link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Cinzel+Decorative|Megrim|Peddana|Poiret+One|Signika|Josefin+Sans" rel="stylesheet">
   </head>
